# virtualdj-ytm

./: .gitignore  README.md  STEPS.txt
python/: .gitignore  index.py  launch_ui.py  logger.py  requirements.txt  song.py  test.py
test/: body_request.json  query-bonjour.json  response1.json  response2.json  search.sh  spelling-suggestion.json  test.json
virtualdj-ytm/: CMakeLists.txt  CMakeUserPresets.json  vcpkg.json  virtualdj-ytm.cpp  virtualdj-ytm.h
